--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,7 @@
 /BirthList/BirthList/Client/bin/Debug/net5.0
 /BirthList/BirthList/Server/bin/Debug/net5.0
 /BirthList/BirthList/Shared/bin/Debug/net5.0
+/BirthList/BirthList/Client/bin/Release/net5.0
+/BirthList/BirthList/Client/bin/Release/net5.0
+/BirthList/BirthList/Server/bin/Release/net5.0
+/BirthList/BirthList/Shared/bin/Release/net5.0
