--- a/BirthList/BirthList/Server/BirthList.Server.csproj
+++ b/BirthList/BirthList/Server/BirthList.Server.csproj
@@ -1,7 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <UserSecretsId>a480cdb5-bf4a-4590-8377-aa93bb7ba77f</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
